--- a/force-app/main/default/classes/AccountHelper.cls
+++ b/force-app/main/default/classes/AccountHelper.cls
@@ -37,7 +37,9 @@ public with sharing class AccountHelper {
     }
 
     public static void defaultContact(List<Account> accounts) {
-        if (accounts == null || accounts.isEmpty()) return;
+        if (accounts == null || accounts.isEmpty()){
+            return;
+        } 
 
         List<Contact> contacts = new List<Contact>();   
         for(Account acc : accounts) {
