Refactor defaultContact method to simplify contact insertion and improve error handling

--- a/force-app/main/default/classes/AccountHelper.cls
+++ b/force-app/main/default/classes/AccountHelper.cls
@@ -51,11 +51,7 @@ public with sharing class AccountHelper {
         }
 
         if (!contacts.isEmpty()) {
-            try {
-                insert contacts;
-            } catch (DmlException e) {
-                System.debug('Error inserting default contacts: ' + e.getMessage());
+                Database.insert(contacts, AccessLevel.SYSTEM_MODE);
             }
-        }
     }
 }
